syntax = "proto3";
import "google/protobuf/empty.proto";
package regionservcie;
option cc_generic_services = true;

message StartGSRequest
{

}

service G2rgService {
  rpc StartCrossMainGS (StartGSRequest) returns (google.protobuf.Empty);
  rpc StartCrossRoomGS (StartGSRequest) returns (google.protobuf.Empty);
}
